# zktree

./: Cargo.toml  README.md
service/: Cargo.toml
service/src/: service.rs
src/: circuit_compiler.rs  leaf_circuit.rs  leaf_proof.rs  lib.rs  node_circuit.rs  node_proof.rs  proof_data.rs  provable.rs  tests.rs  tree_proof.rs  user_proof.rs  utils.rs  zktree.rs
src/proof_components/: leaf_circuit.rs  leaf_proof.rs  mod.rs  node_circuit.rs  node_proof.rs  tests.rs  user_proof.rs
src/traits/: circuit_compiler.rs  evaluate_and_fill.rs  mod.rs  provable.rs
zktree/: Cargo.toml
zktree/src/: lib.rs  proof_data.rs  tests.rs  utils.rs  zktree.rs
zktree/src/components/: leaf_circuit.rs  leaf_proof.rs  node_circuit.rs  node_proof.rs  tests.rs  user_proof.rs
zktree/src/proof_components/: leaf_proof.rs  node_proof.rs  tests.rs
zktree/src/traits/: circuit_compiler.rs  evaluate_and_fill.rs  mod.rs  proof.rs  provable.rs
